data-types-init-7c

--- a/py_variables.html
+++ b/py_variables.html
@@ -4,7 +4,7 @@
   <title>Переменные | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, мешающая по-настоящему изучать языки программирования и вносящая путаницу …"><meta name="author" content="andygram">-->
+<meta name="description" content="Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -46,7 +46,7 @@
 <table>
 <thead>
 <tr>
-<th>Это вредная метафора, <br>мешающая по-настоящему изучать языки программирования <br>и вносящая путаницу в головы учащихся.</th>
+<th>Это вредная метафора, <br>вносящая путаницу в головы учащихся<br> и мешающая по-настоящему изучать современные динамические языки программирования.</th>
 </tr>
 </thead>
 <tbody>
@@ -63,7 +63,7 @@
 <p>То есть переменная меняет значение, когда её <em>"переклеивают"</em> с одного значения на другое:
 <img alt="pic" src="./images/fruits-with-labels.png"></p>
 <h1>Рассмотрим это подробнее на примере языка Пайтон!</h1>
-<h2>Для наглядности присвоим типам данных -- цвета:</h2>
+<h2>Для наглядности присвоим типам данных цвета:</h2>
 <p><img alt="pic" src="./images/python-types-colors.jpg"></p>
 <table>           
 <tr><th>переменные до<th>присваивание<th>переменные после</tr>
