--- a/index5.html
+++ b/index5.html
@@ -29,12 +29,12 @@
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
+<h2><a href="./py_minak.html">Задачи</a></h2>
+<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
+Задачи повышенной сложности
 <h2><a href="./py_variables.html">Переменные</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
-<h2><a href="./py_datatypes.html">Типы данных</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
 <div class="pagination">
         <a href="./index4.html">&larr;Prev</a>
     page 5 of 7.
