--- a/lesson-23.html
+++ b/lesson-23.html
@@ -21,7 +21,7 @@
     </div>
 </div>    <div id="main">
 <h2><a href="./lesson-23.html">Урок 23</a></h2>
-<h5><i class="icon-feather"></i> 27.03.2023, Пн
+<h5><i class="icon-feather"></i> 28.03.2023, Вт
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
