minak-book-task-2

--- a/index5.html
+++ b/index5.html
@@ -29,9 +29,9 @@
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
-<h2><a href="./py_minak.html">Задачи</a></h2>
+<h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Задачи повышенной сложности
+Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:
 <h2><a href="./py_variables.html">Переменные</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
