--- a/py_minak.html
+++ b/py_minak.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Задачи | ОГЭ 2023 информатика</title>
+  <title>Задачи повышенной сложности | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Задачи повышенной сложности"><meta name="author" content="andygram">-->
+<meta name="description" content="Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,22 +20,35 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./py_minak.html">Задачи</a></h2>
+<h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/book.html">book</a> / </span>
 </h5>
 
-<p><img alt="pic" src="./images/minak-book-cover.png"></p>
-<h1>Задачи повышенной сложности</h1>
+<table>
+<thead>
+<tr>
+<th><img alt="pic" src="./images/minak-book-cover.png"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Условие задачи, решение в виде программного кода и пример его работы:</td>
+</tr>
+</tbody>
+</table>
+<h3>Не очень сложные:</h3>
 <p><img alt="pic" src="./images/minak_task15-2_v1_python.png">
 <img alt="pic" src="./images/minak_task15-2_v2_python.png">
 <img alt="pic" src="./images/minak_task15-2_v3_python.png">
 <img alt="pic" src="./images/minak_task15-2_v4_python.png">
-<img alt="pic" src="./images/minak_task15-2_v5_python.png">
-<img alt="pic" src="./images/minak_task15-2_v7_python.png">
-<img alt="pic" src="./images/minak_task15-2_v6_python.png">
-<img alt="pic" src="./images/minak_task15-2_v8_python.png">
+<img alt="pic" src="./images/minak_task15-2_v5_python.png"></p>
+<h2>Чуть посложнее:</h2>
+<p><img alt="pic" src="./images/minak_task15-2_v7_python.png">
+<img alt="pic" src="./images/minak_task15-2_v6_python.png"></p>
+<h1>Ещё сложнее:</h1>
+<p><img alt="pic" src="./images/minak_task15-2_v8_python.png">
 <img alt="pic" src="./images/minak_task15-2_v9_python.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
