next-lesson-24-init-0

--- a/py_polyakov.html
+++ b/py_polyakov.html
@@ -44,10 +44,12 @@
 <img alt="pic" src="./images/python-polykov-slide-15.jpg">
 <img alt="pic" src="./images/python-polykov-slide-16.jpg">
 <img alt="pic" src="./images/python-polykov-slide-17.jpg">
-<img alt="pic" src="./images/python-polykov-slide-18.jpg">
-<img alt="pic" src="./images/python-polykov-slide-19.jpg">
-<img alt="pic" src="./images/python-polykov-slide-20.jpg">
-<img alt="pic" src="./images/python-polykov-slide-21.jpg"></p>
+<img alt="pic" src="./images/python-polykov-slide-18.jpg"></p>
+<!--
+![pic](./images/python-polykov-slide-19.jpg)
+![pic](./images/python-polykov-slide-20.jpg)
+![pic](./images/python-polykov-slide-21.jpg)
+-->
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
