--- a/index4.html
+++ b/index4.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-09.html">Урок 9</a></h2>
+<h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
+Разбор задания 4 (Кратчайшее расстояние)
 <h2><a href="./lesson-08.html">Урок 8</a></h2>
 <h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
 Разбор задания 6 (Бесконечный цикл)
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-05.html">Урок 5</a></h2>
 <h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
 Разбор задания 7 (Интернет-адрес) + Контрольная работа
-<h2><a href="./lesson-04.html">Урок 4</a></h2>
-<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
-Разбор задания 8 (Поисковый запрос)
 <div class="pagination">
         <a href="./index3.html">&larr;Prev</a>
     page 4 of 7.
