--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_variables.html">Переменные</a></h2>
+<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
+Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
 <h2><a href="./py_datatypes.html">Типы данных</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
@@ -32,9 +35,6 @@ Youtube: Короткие видеоуроки по Пайтону
 <h2><a href="./py_memo.html">Питончик</a></h2>
 <h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
 Шпаргалка по языку Python
-<h2><a href="./evich_answers.html">Ответы</a></h2>
-<h5><i class="icon-feather"></i> 16.09.2022, Пт </h5>
-Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 7.
