--- a/lesson-24.html
+++ b/lesson-24.html
@@ -86,17 +86,72 @@ print("Итоговая оценка:", b)</code></pre>
 <h2>Задача 4:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-4.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>#</code></pre>
+<pre><code># все комбинации: 100 101 102 .... 998 999
+# t - время на одну комбинацию
+# вывести список чисел с неповторяющимися цифрами
+# вывести суммарное время z
+t = 4
+z = 0
+for i in range(100, 1000):
+    j = str(i)  # 713 --> "713"
+    a = j[0]    # "7"
+    b = j[1]    # "1"
+    c = j[2]    # "3"
+    if a != b and b != c and c != a :
+        print(i, end=" ")
+        z += t
+h = z // 3600
+m = (z % 3600) // 60
+s = (z % 3600) % 60
+print()
+print("Потребуется", h, "часов, ", m, "минут и ", s, "секунд")</code></pre>
 
 <h2>Задача 5:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-5.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>#</code></pre>
+<pre><code>
+# 1 2 4 8 16 32 64 ...
+# 1 3 9 27 81 243 ...
+# число V вводится с клавиатуры
+v = int(input("Введите число:"))
+
+n = 0  # переменная для степени двойки
+while v > 2**n:
+    n += 1
+print(f"Число {v} находится между 2**{n-1} и 2**{n}")
+
+m = 0  # переменная для степени тройки
+while v > 3**m:
+    m += 1
+print(f"Число {v} находится между 3**{m-1} и 3**{m}")
+</code></pre>
 
 <h2>Задача 6:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-6.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>#</code></pre>
+<pre><code># 1: S = 10
+# 2: S * 1.10                                    =11.000
+# 3: S * 1.10 * 1.10                             =12.100
+# 4: S * 1.10 * 1.10 * 1.10                      =13.310
+# 5: S * 1.10 * 1.10 * 1.10 * 1.10               =14.641
+# 6: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10        =16.105
+# 7: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 =17.716
+# и так далее
+
+s = 10                  # за день 1
+w = 0                   # за неделю
+for d in range(7):
+    w += s
+    s *= 1.1
+print(f"За неделю тренировок пробежал {round(w,3)} км")
+
+s = 10                  # за день 1
+d = 1                   # номер дня
+while s <= 15:
+    d += 1
+    s *= 1.1
+print(f"На {d}-ый день пробежал {round(s,3)} км")
+</code></pre>
 
 <h2>Задача 7:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-7.jpg"></p>
