--- a/lesson-24.html
+++ b/lesson-24.html
@@ -104,16 +104,16 @@ h = z // 3600
 m = (z % 3600) // 60
 s = (z % 3600) % 60
 print()
-print("Потребуется", h, "часов, ", m, "минут и ", s, "секунд")</code></pre>
+print("Потребуется", h, "часов, ", m, "минут и ", s, "секунд")
+</code></pre>
 
 <h2>Задача 5:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-5.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>
-# 1 2 4 8 16 32 64 ...
-# 1 3 9 27 81 243 ...
+<pre><code># Степени двойки: 1 2 4 8 16 32 64 ...
+# Степени тройки: 1 3 9 27 81 243 729...
 # число V вводится с клавиатуры
-v = int(input("Введите число:"))
+v = float(input("Введите число:"))
 
 n = 0  # переменная для степени двойки
 while v > 2**n:
