next-lesson-24-init-3

--- a/lesson-24.html
+++ b/lesson-24.html
@@ -90,7 +90,8 @@ print("Итоговая оценка:", b)</code></pre>
 # t - время на одну комбинацию
 # вывести список чисел с неповторяющимися цифрами
 # вывести суммарное время z
-t = 4
+t = 5
+n = 0
 z = 0
 for i in range(100, 1000):
     j = str(i)  # 713 --> "713"
@@ -100,11 +101,18 @@ for i in range(100, 1000):
     if a != b and b != c and c != a :
         print(i, end=" ")
         z += t
+        n += 1
 h = z // 3600
 m = (z % 3600) // 60
 s = (z % 3600) % 60
 print()
-print("Потребуется", h, "часов, ", m, "минут и ", s, "секунд")
+print(f"На ввод одной комбинации {t} секунд")
+print(f"На ввод всех {n} комбинаций")
+print(f"Потребуется {z} секунд ({h}:{m}:{s})")
+
+# На ввод одной комбинации 5 секунд
+# На ввод всех 648 комбинаций
+# Потребуется 3240 секунд (0:54:0)
 </code></pre>
 
 <h2>Задача 5:</h2>
@@ -118,12 +126,12 @@ v = float(input("Введите число:"))
 n = 0  # переменная для степени двойки
 while v > 2**n:
     n += 1
-print(f"Число {v} находится между 2**{n-1} и 2**{n}")
+print(f"Число {v} находится между 2**{n-1} и 2**{n}. Едем в Москву!")
 
 m = 0  # переменная для степени тройки
 while v > 3**m:
     m += 1
-print(f"Число {v} находится между 3**{m-1} и 3**{m}")
+print(f"Число {v} находится между 3**{m-1} и 3**{m}. Едем в Питер!")
 </code></pre>
 
 <h2>Задача 6:</h2>
