next-lesson-24-init-4

--- a/lesson-24.html
+++ b/lesson-24.html
@@ -50,26 +50,28 @@ print('Прервано на числе ' + str(n))</code></pre>
 <h2>Задача 1:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-1.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>z = 0
-n = int(input('Введите стоимость покупки:'))
+<pre><code>n = float(input('Введите стоимость покупки:'))
 z = n
-if 1000 <= n < 2000: z = n * 0.98  # -2%
-if 2000 <= n < 5000: z = n * 0.95  # -5%
-if 5000 <= n:        z = n * 0.92  # -8%
+if 1000 <= n < 2000:
+    z = n * 0.98  # -2%
+if 2000 <= n < 5000:
+    z = n * 0.95  # -5%
+if 5000 <= n:
+    z = n * 0.92  # -8%
+z = round(z, 2)   # округление до 2 знаков после точки
 print("Сумма к оплате:", z)</code></pre>
 
 <h2>Задача 2:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-2.jpg"></p>
 <h3>Решение:</h3>
-<pre><code>n = z = 0
+<pre><code>x = y = z = 0
 for i in range(6):
-    x = int(input('Введите стоимость покупки:'))
-    n = n + x
-if 1000 <= n < 2000: z = n * 0.98  # -2%
-if 2000 <= n < 5000: z = n * 0.95  # -5%
-if 5000 <= n:        z = n * 0.92  # -8%
-z = round(b, 2)                    # округление до 2 знаков после точки
-print("Сумма к оплате:", z)</code></pre>
+    x = float(input('Введите стоимость покупки:'))
+    if 1000 <= x < 2000: y = x * 0.98  # -2%
+    if 2000 <= x < 5000: y = x * 0.95  # -5%
+    if 5000 <= x       : y = x * 0.92  # -8%
+    z = z + y
+print("Сумма к оплате:", round(z, 2))</code></pre>
 
 <h2>Задача 3:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-3.jpg"></p>
@@ -121,17 +123,17 @@ print(f"Потребуется {z} секунд ({h}:{m}:{s})")
 <pre><code># Степени двойки: 1 2 4 8 16 32 64 ...
 # Степени тройки: 1 3 9 27 81 243 729...
 # число V вводится с клавиатуры
-v = float(input("Введите число:"))
+v = abs(float(input("Введите число:")))
 
 n = 0  # переменная для степени двойки
 while v > 2**n:
     n += 1
-print(f"Число {v} находится между 2**{n-1} и 2**{n}. Едем в Москву!")
+print(f"Число {v} находится между 2^{n-1} и 2^{n}. Едем в Москву!")
 
 m = 0  # переменная для степени тройки
 while v > 3**m:
     m += 1
-print(f"Число {v} находится между 3**{m-1} и 3**{m}. Едем в Питер!")
+print(f"Число {v} находится между 3^{m-1} и 3^{m}. Едем в Питер!")
 </code></pre>
 
 <h2>Задача 6:</h2>
@@ -163,6 +165,11 @@ print(f"На {d}-ый день пробежал {round(s,3)} км")
 
 <h2>Задача 7:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-7.jpg"></p>
+<h3>Решение:</h3>
+<pre><code>#</code></pre>
+
+<h2>Задача 8:</h2>
+<p><img alt="pic" src="./images/python-polykov-task-8.jpg"></p>
 <h3>Решение:</h3>
 <pre><code>#</code></pre>
 
