next-lesson-25-init-0

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-25.html">Урок 25</a></h2>
+<h5><i class="icon-feather"></i> 11.04.2023, Вт </h5>
+Диктант по Пайтону
 <h2><a href="./lesson-24.html">Урок 24</a></h2>
 <h5><i class="icon-feather"></i> 04.04.2023, Вт </h5>
 Контрольная работа по Пайтону
@@ -32,11 +35,8 @@ Stepik 63223: Курc по Пайтону (Циклы, Решение задач
 <h2><a href="./lesson-21.html">Урок 21</a></h2>
 <h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
 Stepik 63223: Курc по Пайтону (Линейный алгоритм, Ветвление)
-<h2><a href="./lesson-20.html">Урок 20</a></h2>
-<h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) if-else
 <div class="pagination">
-    page 1 of 7.
+    page 1 of 8.
         <a href="./index2.html">Next&rarr;</a>
 </div>    </div>
 </div>
