--- a/index5.html
+++ b/index5.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-05.html">Урок 5</a></h2>
+<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
+Разбор задания 7 (Интернет-адрес) + Контрольная работа
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
 Разбор задания 8 (Поисковый запрос)
@@ -32,12 +35,9 @@
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
-<h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:
 <div class="pagination">
         <a href="./index4.html">&larr;Prev</a>
-    page 5 of 7.
+    page 5 of 8.
         <a href="./index6.html">Next&rarr;</a>
 </div>    </div>
 </div>
