--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
+<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
+Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:
 <h2><a href="./py_variables.html">Переменные</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
@@ -32,12 +35,9 @@
 <h2><a href="./py_youtube.html">Видеоуроки</a></h2>
 <h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
 Youtube: Короткие видеоуроки по Пайтону
-<h2><a href="./py_memo.html">Питончик</a></h2>
-<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
-Шпаргалка по языку Python
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
-    page 6 of 7.
+    page 6 of 8.
         <a href="./index7.html">Next&rarr;</a>
 </div>    </div>
 </div>
