--- a/lesson-24.html
+++ b/lesson-24.html
@@ -60,18 +60,27 @@ if 5000 <= n:
     z = n * 0.92  # -8%
 z = round(z, 2)   # округление до 2 знаков после точки
 print("Сумма к оплате:", z)</code></pre>
+<pre>Введите стоимость покупки:2500
+Сумма к оплате: 2375.0</pre>
 
 <h2>Задача 2:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-2.jpg"></p>
 <h3>Решение:</h3>
 <pre><code>x = y = z = 0
 for i in range(6):
-    x = float(input('Введите стоимость покупки:'))
+    x = float(input('Введите стоимость ' + str(i+1) + '-ой покупки:'))
     if 1000 <= x < 2000: y = x * 0.98  # -2%
     if 2000 <= x < 5000: y = x * 0.95  # -5%
     if 5000 <= x       : y = x * 0.92  # -8%
-    z = z + y
-print("Сумма к оплате:", round(z, 2))</code></pre>
+    z = z + round(y, 2)
+print("Сумма к оплате:", z)</code></pre>
+<pre>Введите стоимость 1-ой покупки:926.21
+Введите стоимость 2-ой покупки:3950.14
+Введите стоимость 3-ой покупки:2000.01
+Введите стоимость 4-ой покупки:852.49
+Введите стоимость 5-ой покупки:1.99
+Введите стоимость 6-ой покупки:1023.52
+Сумма к оплате: 11458.76</pre>
 
 <h2>Задача 3:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-3.jpg"></p>
@@ -82,8 +91,10 @@ b = b - max(a)                     # минус наибольшая
 b = b - min(a)                     # минус наименьшая
 b = b / 8                          # среднее
 b = round(b, 1)                    # округление
-print("Оценки судей:", a)
+print("Оценки судей:", *a)
 print("Итоговая оценка:", b)</code></pre>
+<pre>Оценки судей: 5.0 4.9 5.5 5.8 6.0 5.3 5.0 5.7 5.5 5.2
+Итоговая оценка: 5.4</pre>
 
 <h2>Задача 4:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-4.jpg"></p>
@@ -92,30 +103,24 @@ print("Итоговая оценка:", b)</code></pre>
 # t - время на одну комбинацию
 # вывести список чисел с неповторяющимися цифрами
 # вывести суммарное время z
-t = 5
+t = 11
 n = 0
 z = 0
-for i in range(100, 1000):
-    j = str(i)  # 713 --> "713"
-    a = j[0]    # "7"
-    b = j[1]    # "1"
-    c = j[2]    # "3"
+for k in range(100, 1000):
+    a, b, c = str(k)
     if a != b and b != c and c != a :
-        print(i, end=" ")
+        print(k, end=" ")
         z += t
         n += 1
 h = z // 3600
-m = (z % 3600) // 60
-s = (z % 3600) % 60
+m = z % 3600 // 60
+s = z % 60
 print()
-print(f"На ввод одной комбинации {t} секунд")
-print(f"На ввод всех {n} комбинаций")
-print(f"Потребуется {z} секунд ({h}:{m}:{s})")
-
-# На ввод одной комбинации 5 секунд
-# На ввод всех 648 комбинаций
-# Потребуется 3240 секунд (0:54:0)
+print(f"На ввод одного числа  : {t} секунд")
+print(f"На ввод всех {n} чисел: {z} секунд ({h}:{m}:{s})")
 </code></pre>
+<pre>На ввод одного числа  : 11 секунд
+На ввод всех 648 чисел: 7128 секунд (1:58:48)</pre>
 
 <h2>Задача 5:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-5.jpg"></p>
@@ -135,17 +140,20 @@ while v > 3**m:
     m += 1
 print(f"Число {v} находится между 3^{m-1} и 3^{m}. Едем в Питер!")
 </code></pre>
+<pre>Введите число:55
+Число 55.0 находится между 2^5 и 2^6. Едем в Москву!
+Число 55.0 находится между 3^3 и 3^4. Едем в Питер!</pre>
 
 <h2>Задача 6:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-6.jpg"></p>
 <h3>Решение:</h3>
-<pre><code># 1: S = 10
-# 2: S * 1.10                                    =11.000
-# 3: S * 1.10 * 1.10                             =12.100
-# 4: S * 1.10 * 1.10 * 1.10                      =13.310
-# 5: S * 1.10 * 1.10 * 1.10 * 1.10               =14.641
-# 6: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10        =16.105
-# 7: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 =17.716
+<pre><code># 1: S                                           = 10 км
+# 2: S * 1.10                                    = 11.000
+# 3: S * 1.10 * 1.10                             = 12.100
+# 4: S * 1.10 * 1.10 * 1.10                      = 13.310
+# 5: S * 1.10 * 1.10 * 1.10 * 1.10               = 14.641
+# 6: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10        = 16.105
+# 7: S * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 * 1.10 = 17.716
 # и так далее
 
 s = 10                  # за день 1
@@ -162,6 +170,8 @@ while s <= 15:
     s *= 1.1
 print(f"На {d}-ый день пробежал {round(s,3)} км")
 </code></pre>
+<pre>За неделю тренировок пробежал 94.872 км
+На 6-ый день пробежал 16.105 км</pre>
 
 <h2>Задача 7:</h2>
 <p><img alt="pic" src="./images/python-polykov-task-7.jpg"></p>
