--- a/index7.html
+++ b/index7.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_memo.html">Питончик</a></h2>
+<h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
+Шпаргалка по языку Python
 <h2><a href="./evich_answers.html">Ответы</a></h2>
 <h5><i class="icon-feather"></i> 16.09.2022, Пт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
@@ -32,12 +35,10 @@
 <h2><a href="./calendar-year.html">Учебный год</a></h2>
 <h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
 Календарь на 2022-2023 учебный год
-<h2><a href="./meeting.html">Договор</a></h2>
-<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
-Знакомство с родителями и договор
 <div class="pagination">
         <a href="./index6.html">&larr;Prev</a>
-    page 7 of 7.
+    page 7 of 8.
+        <a href="./index8.html">Next&rarr;</a>
 </div>    </div>
 </div>
 <div id="footer-wrapper">
