--- a/index8.html
+++ b/index8.html
@@ -20,25 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-20.html">Урок 20</a></h2>
-<h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) if-else
-<h2><a href="./lesson-19.html">Урок 19</a></h2>
-<h5><i class="icon-feather"></i> 28.02.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) while
-<h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 21.02.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) for
-<h2><a href="./lesson-17.html">Урок 17</a></h2>
-<h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
+<h2><a href="./meeting.html">Договор</a></h2>
+<h5><i class="icon-feather"></i> 11.09.2022, Вс </h5>
+Знакомство с родителями и договор
 <div class="pagination">
-        <a href="./index.html">&larr;Prev</a>
-    page 2 of 8.
-        <a href="./index3.html">Next&rarr;</a>
+        <a href="./index7.html">&larr;Prev</a>
+    page 8 of 8.
 </div>    </div>
 </div>
 <div id="footer-wrapper">
