next-lesson-25-init-1

--- a/lesson-25.html
+++ b/lesson-25.html
@@ -37,7 +37,7 @@
 <ul>
 <li>используем IDLE</li>
 <li>берём одно за другим задание 15-2 (сколько успеем, планирую штук 10-12)</li>
-<li>создаём файл <strong>E2020-Z15-V0x.py</strong> (где x - номер варианта)</li>
+<li>создаём файл <strong>evich-2021-task15_2-vXX.py</strong> (где XX - номер варианта)</li>
 <li>ты пишешь решение под мою диктовку (я могу намеренно вносить ошибки, ты их должен замечать и исправлять)</li>
 <li>доводим решение до правильного ответа, до получения двух баллов</li>
 </ul>
@@ -110,7 +110,7 @@ print(z)
 </code></pre>
 <p>Run E2020-Z15-V01.py</p>
 <pre><code class="py">>>>
-=============== RESTART: E2020-Z15-V01.py ===============
+=============== RESTART: evich-2021-task15_2-v01.py ===============
 6
 24
 1410
@@ -121,6 +121,24 @@ print(z)
 2
 >>></code></pre>
 
+<h2>Вариант 02:</h2>
+<h2>Вариант 03:</h2>
+<h2>Вариант 04:</h2>
+<h2>Вариант 05:</h2>
+<h2>Вариант 06:</h2>
+<h2>Вариант 07:</h2>
+<h2>Вариант 08:</h2>
+<h2>Вариант 09:</h2>
+<h2>Вариант 10:</h2>
+<h2>Вариант 11:</h2>
+<h2>Вариант 12:</h2>
+<h2>Вариант 13:</h2>
+<h2>Вариант 14:</h2>
+<h2>Вариант 15:</h2>
+<h2>Вариант 16:</h2>
+<h2>Вариант 17:</h2>
+<h2>Вариант 18:</h2>
+<h2>Вариант 19:</h2>
 <h2>Вариант 20:</h2>
 <p><img alt="pic" src="./images/evich2021-V20-Z15-2.png"></p>
 <h2>Решение:</h2>
