next-lesson-25-init-2

--- a/lesson-25.html
+++ b/lesson-25.html
@@ -90,7 +90,7 @@ for i in range(k):
 
 print(z)
 </code></pre>
-<p>Программа как бы готова!<br> Осталось запрограммировать "правильное" условие:</p>
+<p>Программа как бы готова!<br> Осталось запрограммировать реальное условие:</p>
 <pre><code class="py" style="font-size: 1.5em;">z = 0
 k = int(input())
 for i in range(k):
@@ -108,7 +108,7 @@ for i in range(k):
       z += 1
 print(z)
 </code></pre>
-<p>Run E2020-Z15-V01.py</p>
+<p>%Run evich-2021-task15_2-v01.py</p>
 <pre><code class="py">>>>
 =============== RESTART: evich-2021-task15_2-v01.py ===============
 6
@@ -144,7 +144,7 @@ print(z)
 <h2>Решение:</h2>
 <pre><code class="py" style="font-size: 1.3em;">z = 0             # Всегда начинаем с переменной для ответа
 
-<span style="color:green"><i>(получим x, получим n  и  вычислим z)</i></span>
+<span style="color:green"># <i>(получим x, получим n  и  вычислим z)</i></span>
 
 print(z)          # печатаем ответ
 </code></pre>
