--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-26.html">Урок 26</a></h2>
+<h5><i class="icon-feather"></i> 25.04.2023, Вт </h5>
+Поиск информации
 <h2><a href="./lesson-25.html">Урок 25</a></h2>
 <h5><i class="icon-feather"></i> 11.04.2023, Вт </h5>
 Диктант по Пайтону
@@ -32,9 +35,6 @@ Stepik 63223: Курc по Пайтону (Итоговая работа)
 <h2><a href="./lesson-22.html">Урок 22</a></h2>
 <h5><i class="icon-feather"></i> 21.03.2023, Вт </h5>
 Stepik 63223: Курc по Пайтону (Циклы, Решение задач)
-<h2><a href="./lesson-21.html">Урок 21</a></h2>
-<h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
-Stepik 63223: Курc по Пайтону (Линейный алгоритм, Ветвление)
 <div class="pagination">
     page 1 of 8.
         <a href="./index2.html">Next&rarr;</a>
