--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-21.html">Урок 21</a></h2>
+<h5><i class="icon-feather"></i> 14.03.2023, Вт </h5>
+Stepik 63223: Курc по Пайтону (Линейный алгоритм, Ветвление)
 <h2><a href="./lesson-20.html">Урок 20</a></h2>
 <h5><i class="icon-feather"></i> 07.03.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) if-else
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-17.html">Урок 17</a></h2>
 <h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
 Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
 <div class="pagination">
         <a href="./index.html">&larr;Prev</a>
     page 2 of 8.
