--- a/index4.html
+++ b/index4.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-11.html">Урок 11</a></h2>
+<h5><i class="icon-feather"></i> 13.12.2022, Вт </h5>
+Разбор задания 2 (Зашифрованное сообщение)
 <h2><a href="./lesson-10.html">Урок 10</a></h2>
 <h5><i class="icon-feather"></i> 29.11.2022, Вт </h5>
 Разбор задания 3 (Истинность высказывания)
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-07.html">Урок 7</a></h2>
 <h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
 Разбор задания 6 (Конечный цикл)
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) + "Лайфхак"
 <div class="pagination">
         <a href="./index3.html">&larr;Prev</a>
     page 4 of 8.
