--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-01.html">Урок 1</a></h2>
+<h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
+Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
 <h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:
@@ -32,9 +35,6 @@
 <h2><a href="./py_polyakov.html">Презентация</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Презентация по материалам К.Ю.Полякова
-<h2><a href="./py_youtube.html">Видеоуроки</a></h2>
-<h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
-Youtube: Короткие видеоуроки по Пайтону
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 8.
