--- a/index7.html
+++ b/index7.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_youtube.html">Видеоуроки</a></h2>
+<h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
+Youtube: Короткие видеоуроки по Пайтону
 <h2><a href="./py_memo.html">Питончик</a></h2>
 <h5><i class="icon-feather"></i> 17.09.2022, Сб </h5>
 Шпаргалка по языку Python
@@ -32,9 +35,6 @@
 <h2><a href="./oge_fipi.html">Ф И П И</a></h2>
 <h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
 Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
-<h2><a href="./calendar-year.html">Учебный год</a></h2>
-<h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
-Календарь на 2022-2023 учебный год
 <div class="pagination">
         <a href="./index6.html">&larr;Prev</a>
     page 7 of 8.
