--- a/lesson-26.html
+++ b/lesson-26.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 26 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Поиск информации"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,29 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
-<h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
-Стратегия сдачи ОГЭ на 13 баллов из 19
-<h2><a href="./lesson-14.html">Урок 14</a></h2>
-<h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
-Решение заданий первой части
-<h2><a href="./lesson-13.html">Урок 13</a></h2>
-<h5><i class="icon-feather"></i> 11.01.2023, Ср </h5>
-Разбор задания 5 (Вычислитель)
-<h2><a href="./lesson-12.html">Урок 12</a></h2>
-<h5><i class="icon-feather"></i> 20.12.2022, Вт </h5>
-Разбор задания 1 (Биты и байты)
-<div class="pagination">
-        <a href="./index2.html">&larr;Prev</a>
-    page 3 of 8.
-        <a href="./index4.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./lesson-26.html">Урок 26</a></h2>
+<h5><i class="icon-feather"></i> 25.04.2023, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h2>Оценка текущего уровня подготовки</h2>
+<p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
+<h1>Разбор заданий 11 и 12 (Поиск информации)</h1>
+<h3>Вариант 01:</h3>
+<h3>Вариант 02:</h3>
+<h3>Вариант 03:</h3>
+<h3>Вариант 04:</h3>
+<h3>Вариант 05:</h3>
+<h3>Вариант 06:</h3>
+<h3>Вариант 07:</h3>
+<h3>Вариант 08:</h3>
+<p><img alt="pic" src="./images/evich-2021-task1112-v20.png"></p>
+<h2>Скорректированная оценка уровня подготовки</h2>
+<p><img alt="pic" src="./images/oge-inf-curr-level-5.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
