next-lesson-26-init-1

--- a/lesson-26.html
+++ b/lesson-26.html
@@ -4,7 +4,7 @@
   <title>Урок 26 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content="Поиск информации"><meta name="author" content="andygram">-->
+<meta name="description" content="Разбор заданий 11 и 12 (Поиск информации в файлах)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -28,7 +28,7 @@
 
 <h2>Оценка текущего уровня подготовки</h2>
 <p><img alt="pic" src="./images/oge-inf-curr-level-4.png"></p>
-<h1>Разбор заданий 11 и 12 (Поиск информации)</h1>
+<h1>Задания 11 и 12 : Поиск информации в файлах</h1>
 <h3>Вариант 01:</h3>
 <h3>Вариант 02:</h3>
 <h3>Вариант 03:</h3>
