--- a/index5.html
+++ b/index5.html
@@ -20,6 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-08.html">Урок 8</a></h2>
+<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
+Разбор задания 6 (Бесконечный цикл)
+<h2><a href="./lesson-07.html">Урок 7</a></h2>
+<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
+Разбор задания 6 (Конечный цикл)
 <h2><a href="./lesson-06.html">Урок 6</a></h2>
 <h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
 Разбор задания 6 (Условный оператор) + "Лайфхак"
@@ -29,12 +35,6 @@
 <h2><a href="./lesson-04.html">Урок 4</a></h2>
 <h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
 Разбор задания 8 (Поисковый запрос)
-<h2><a href="./lesson-03.html">Урок 3</a></h2>
-<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
-Разбор задания 9 (Схема дорог)
-<h2><a href="./lesson-02.html">Урок 2</a></h2>
-<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
-Разбор задания 10 (Системы счисления)
 <div class="pagination">
         <a href="./index4.html">&larr;Prev</a>
     page 5 of 8.
