--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-03.html">Урок 3</a></h2>
+<h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
+Разбор задания 9 (Схема дорог)
+<h2><a href="./lesson-02.html">Урок 2</a></h2>
+<h5><i class="icon-feather"></i> 27.09.2022, Вт </h5>
+Разбор задания 10 (Системы счисления)
 <h2><a href="./lesson-01.html">Урок 1</a></h2>
 <h5><i class="icon-feather"></i> 20.09.2022, Вт </h5>
 Разбор заданий 13.1 (создание презентации) и 13.2 (форматирование текста)
@@ -29,12 +35,6 @@
 <h2><a href="./py_variables.html">Переменные</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
-<h2><a href="./py_datatypes.html">Типы данных</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
-<h2><a href="./py_polyakov.html">Презентация</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Презентация по материалам К.Ю.Полякова
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 8.
