--- a/index7.html
+++ b/index7.html
@@ -20,6 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./py_datatypes.html">Типы данных</a></h2>
+<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
+Любая программа во время своей работы хранит в оперативной памяти различные данные: названия и фамилии номера и количества суммы и проценты даты и время ... и тому подобное то есть хранит данные различных типов. Если бы данные имели цвет, то память программы могла бы выглядеть так: Есть один тонкий момент, связанный …
+<h2><a href="./py_polyakov.html">Презентация</a></h2>
+<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
+Презентация по материалам К.Ю.Полякова
 <h2><a href="./py_youtube.html">Видеоуроки</a></h2>
 <h5><i class="icon-feather"></i> 18.09.2022, Вс </h5>
 Youtube: Короткие видеоуроки по Пайтону
@@ -29,12 +35,6 @@ Youtube: Короткие видеоуроки по Пайтону
 <h2><a href="./evich_answers.html">Ответы</a></h2>
 <h5><i class="icon-feather"></i> 16.09.2022, Пт </h5>
 Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="./evich_book.html">Книга</a></h2>
-<h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
-Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
-<h2><a href="./oge_fipi.html">Ф И П И</a></h2>
-<h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
-Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <div class="pagination">
         <a href="./index6.html">&larr;Prev</a>
     page 7 of 8.
