--- a/index8.html
+++ b/index8.html
@@ -20,6 +20,12 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./evich_book.html">Книга</a></h2>
+<h5><i class="icon-feather"></i> 15.09.2022, Чт </h5>
+Людмила Николаевна Евич. ОГЭ-2021 Информатика и ИКТ. Подготовка к ОГЭ-2021. 9 класс. 20 тренировочных вариантов по демоверсии 2021 года.
+<h2><a href="./oge_fipi.html">Ф И П И</a></h2>
+<h5><i class="icon-feather"></i> 13.09.2022, Вт </h5>
+Федеральный институт педагогических измерений. Пояснения к демонстрационному варианту контрольных измерительных материалов основного государственного экзамена 2023 года.
 <h2><a href="./calendar-year.html">Учебный год</a></h2>
 <h5><i class="icon-feather"></i> 12.09.2022, Пн </h5>
 Календарь на 2022-2023 учебный год
