--- a/lesson-28.html
+++ b/lesson-28.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Урок 28 | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="Завершающее занятие (повторение всего пройденного)"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,17 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-18.html">Урок 18</a></h2>
-<h5><i class="icon-feather"></i> 21.02.2023, Вт </h5>
-Повторение: Задание 6 (Анализ программного кода) for
-<h2><a href="./lesson-17.html">Урок 17</a></h2>
-<h5><i class="icon-feather"></i> 07.02.2023, Вт </h5>
-Повторение: Задания 5 (Вычислитель) и 4 (Расстояние)
-<h2><a href="./lesson-16.html">Урок 16</a></h2>
-<h5><i class="icon-feather"></i> 03.02.2023, Пт </h5>
-Повторение: Логические выражения
-<h2><a href="./lesson-15.html">Урок 15</a></h2>
-<h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
-Стратегия сдачи ОГЭ на 13 баллов из 19
-<h2><a href="./lesson-14.html">Урок 14</a></h2>
-<h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
-Решение заданий первой части
-<div class="pagination">
-        <a href="./index2.html">&larr;Prev</a>
-    page 3 of 8.
-        <a href="./index4.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./lesson-28.html">Урок 28</a></h2>
+<h5><i class="icon-feather"></i> 29.05.2023, Пн
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/lesson.html">lesson</a> / </span>
+</h5>
+
+<h2>Оценка текущего уровня подготовки</h2>
+<p><img alt="pic" src="./images/oge-inf-curr-level-5.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
