next-lesson-27-init-2

--- a/exam.html
+++ b/exam.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ОГЭ 2023 информатика</title>
+  <title>Экзамен | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
-<meta name="description" content=""><meta name="author" content="andygram">-->
+<meta name="description" content="ОГЭ"><meta name="author" content="andygram">-->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
   <link href="./theme/css/screen.css" rel="stylesheet" type="text/css" />
@@ -20,26 +20,17 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./lesson-09.html">Урок 9</a></h2>
-<h5><i class="icon-feather"></i> 22.11.2022, Вт </h5>
-Разбор задания 4 (Кратчайшее расстояние)
-<h2><a href="./lesson-08.html">Урок 8</a></h2>
-<h5><i class="icon-feather"></i> 08.11.2022, Вт </h5>
-Разбор задания 6 (Бесконечный цикл)
-<h2><a href="./lesson-07.html">Урок 7</a></h2>
-<h5><i class="icon-feather"></i> 01.11.2022, Вт </h5>
-Разбор задания 6 (Конечный цикл)
-<h2><a href="./lesson-06.html">Урок 6</a></h2>
-<h5><i class="icon-feather"></i> 25.10.2022, Вт </h5>
-Разбор задания 6 (Условный оператор) + "Лайфхак"
-<h2><a href="./lesson-05.html">Урок 5</a></h2>
-<h5><i class="icon-feather"></i> 18.10.2022, Вт </h5>
-Разбор задания 7 (Интернет-адрес) + Контрольная работа
-<div class="pagination">
-        <a href="./index4.html">&larr;Prev</a>
-    page 5 of 8.
-        <a href="./index6.html">Next&rarr;</a>
-</div>    </div>
+<h2><a href="./exam.html">Экзамен</a></h2>
+<h5><i class="icon-feather"></i> 30.05.2023, Вт
+<i class="icon-bookmarks"></i>
+<span><a href="./tag/oge.html">oge</a> / </span>
+</h5>
+
+<h2>Оценка</h2>
+<p><img alt="pic" src="./images/oge-inf-curr-level-.png"></p>
+
+<p align="center"><a href="#">on the top</a></p>
+    </div>
 </div>
 <div id="footer-wrapper">
 <ul class="footer">
