--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-19.html">Урок 19</a></h2>
+<h5><i class="icon-feather"></i> 28.02.2023, Вт </h5>
+Повторение: Задание 6 (Анализ программного кода) while
 <h2><a href="./lesson-18.html">Урок 18</a></h2>
 <h5><i class="icon-feather"></i> 21.02.2023, Вт </h5>
 Повторение: Задание 6 (Анализ программного кода) for
@@ -32,9 +35,6 @@
 <h2><a href="./lesson-15.html">Урок 15</a></h2>
 <h5><i class="icon-feather"></i> 24.01.2023, Вт </h5>
 Стратегия сдачи ОГЭ на 13 баллов из 19
-<h2><a href="./lesson-14.html">Урок 14</a></h2>
-<h5><i class="icon-feather"></i> 14.01.2023, Сб </h5>
-Решение заданий первой части
 <div class="pagination">
         <a href="./index2.html">&larr;Prev</a>
     page 3 of 8.
