--- a/index6.html
+++ b/index6.html
@@ -20,6 +20,9 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
+<h2><a href="./lesson-04.html">Урок 4</a></h2>
+<h5><i class="icon-feather"></i> 11.10.2022, Вт </h5>
+Разбор задания 8 (Поисковый запрос)
 <h2><a href="./lesson-03.html">Урок 3</a></h2>
 <h5><i class="icon-feather"></i> 04.10.2022, Вт </h5>
 Разбор задания 9 (Схема дорог)
@@ -32,9 +35,6 @@
 <h2><a href="./py_minak.html">Задачи повышенной сложности</a></h2>
 <h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
 Условие задачи, решение в виде программного кода и пример его работы: Не очень сложные: Чуть посложнее: Ещё сложнее:
-<h2><a href="./py_variables.html">Переменные</a></h2>
-<h5><i class="icon-feather"></i> 19.09.2022, Пн </h5>
-Во всех школах учителя информатики, объясняя понятие переменной, предлагают ученикам представлять "коробку со значением внутри" как образ этой самой переменной. И демонстрируют картинки, показывающие, что коробка остаётся неизменной, а меняется её содержимое, то есть что переменной величиной является значение: Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему …
 <div class="pagination">
         <a href="./index5.html">&larr;Prev</a>
     page 6 of 8.
