next-lesson-27-init-3

--- a/lesson-27.html
+++ b/lesson-27.html
@@ -26,8 +26,8 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
-<h2>Оценка текущего уровня подготовки</h2>
-<p><img alt="pic" src="./images/oge-inf-curr-level-5.png"></p>
+<h2>Дополнительные материалы ФИПИ</h2>
+<p><img alt="pic" src="./images/fipi-dop-mat.png"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
