--- a/lesson-28.html
+++ b/lesson-28.html
@@ -26,6 +26,12 @@
 <span><a href="./tag/lesson.html">lesson</a> / </span>
 </h5>
 
+<h2>Стратегия сдачи ОГЭ на 13 из 19 баллов</h2>
+<p><img alt="pic" src="./images/oge-inf-2023-mark.png"></p>
+<h2>Решение заданий первой части</h2>
+<p><img alt="pic" src="./images/oge-inf-part-1.png"></p>
+<h2>Решение заданий второй части</h2>
+<p><img alt="pic" src="./images/oge-inf-part-2.png"></p>
 <h2>Оценка текущего уровня подготовки</h2>
 <p><img alt="pic" src="./images/oge-inf-curr-level-5.png"></p>
 
