--- a/py_variables.html
+++ b/py_variables.html
@@ -46,12 +46,12 @@
 <table>
 <thead>
 <tr>
-<th>Это вредная метафора, вносящая путаницу в головы учащихся<br> и мешающая по-настоящему изучать современные динамические языки программирования.</th>
+<th>Это вредная метафора, вносящая путаницу в головы учащихся и мешающая по-настоящему изучать современные динамические языки программирования.</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>Каждому, кто захочет в будущем писать более-менее сложный код, придётся переучиваться, <br>потому что изменяется не значение переменной, а <strong>связь</strong> между именем и значением!</td>
+<td>Каждому, кто захочет в будущем писать более-менее сложный код, придётся переучиваться, потому что изменяется не значение переменной, а <strong>связь</strong> между именем и значением!</td>
 </tr>
 </tbody>
 </table>
