next-lesson-28-init-1

--- a/exam.html
+++ b/exam.html
@@ -27,7 +27,7 @@
 </h5>
 
 <h2>Оценка</h2>
-<p><img alt="pic" src="./images/oge-inf-curr-level-.png"></p>
+<p><img alt="pic" src="./images/mark-of-good-ru.jpg"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
