--- a/lesson-28.html
+++ b/lesson-28.html
@@ -24,6 +24,7 @@
 <h5><i class="icon-feather"></i> 29.05.2023, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/lesson.html">lesson</a> / </span>
+<span><a href="./tag/oge.html">oge</a> / </span>
 </h5>
 
 <h2>Стратегия сдачи ОГЭ на 13 из 19 баллов</h2>
