--- a/exam.html
+++ b/exam.html
@@ -27,7 +27,8 @@
 </h5>
 
 <h2>Оценка</h2>
-<p><img alt="pic" src="./images/mark-of-good-ru.jpg"></p>
+<p><img alt="pic" src="./images/mark-of-excellent-rus.jpg">
+<img alt="pic" src="./images/mark-of-good-rus.jpg" title=") ![pic](./images/mark-of-satisfy-rus.jpg"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
