--- a/calendar-year.html
+++ b/calendar-year.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Учебный год | ОГЭ 2023 информатика</title>
+  <title>Календарь | ОГЭ 2023 информатика</title>
   <meta charset="utf-8">
 <!--
 <meta name="description" content="Календарь на 2022-2023 учебный год"><meta name="author" content="andygram">-->
@@ -20,7 +20,7 @@
     <div class="nav">
     </div>
 </div>    <div id="main">
-<h2><a href="./calendar-year.html">Учебный год</a></h2>
+<h2><a href="./calendar-year.html">Календарь</a></h2>
 <h5><i class="icon-feather"></i> 12.09.2022, Пн
 <i class="icon-bookmarks"></i>
 <span><a href="./tag/oge.html">oge</a> / </span>
