--- a/exam.html
+++ b/exam.html
@@ -27,8 +27,10 @@
 </h5>
 
 <h2>Оценка</h2>
-<p><img alt="pic" src="./images/mark-of-excellent-rus.jpg">
-<img alt="pic" src="./images/mark-of-good-rus.jpg" title=") ![pic](./images/mark-of-satisfy-rus.jpg"></p>
+<!--
+![pic](./images/mark-of-excellent-rus.jpg")
+-->
+<p><img alt="pic" src="./images/mark-of-good-rus.jpg" title=") ![pic](./images/mark-of-satisfiedly-rus.jpg"></p>
 
 <p align="center"><a href="#">on the top</a></p>
     </div>
